fix bio text alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -190,6 +190,15 @@ body * {
 
 
 /* 
+    BIO
+ */
+
+.content-wrapper.bio{
+    align-items: flex-start;
+}
+
+
+/* 
     EXPERIENCE 
 */
 
